fix: cdd word-break, header-gap, cache

--- a/src/styles/post/style.css
+++ b/src/styles/post/style.css
@@ -47,6 +47,7 @@
   text-decoration: underline;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
+  word-break: break-all;
 }
 
 .dark .markdown a {
